Can do tiebreakers for paired hands even when valuating kickers